--- a/src/main/resources/static/css/responsive.css
+++ b/src/main/resources/static/css/responsive.css
@@ -121,7 +121,8 @@
     }
 
     .input-shorten,
-    .btn-shorten {
+    .btn-shorten,
+    .btn-shorted-copy {
         width: 100%;
         margin: 10px 0 0 0;
     }
