add conditions to check valid url

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -205,6 +205,9 @@ button {
     font-size: 18px;
     font-weight: 400;
     cursor: pointer;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .btn-copy {
